Style tweak to stop section header being wider than viewport on mobile.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,6 +23,7 @@
 		max-width: 100%;
 		margin-left: 0px;
 		left: 0%;
+		box-sizing: border-box;
 	}
 	.download-bar {
 		margin: 0 -6% 5%;
